# EventScraper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: python-package.yml
calendar_event_engine/: Runner.py  filter.py  globals.py  logger.py
calendar_event_engine/db/: combine_driver.py  db_cache.py  event_source_driver.py  uploaded_events_driver.py
calendar_event_engine/parser/: package.py  submission.py
calendar_event_engine/publishers/: abc_publisher.py
calendar_event_engine/publishers/mobilizon/: api.py  gql_requests.py  types.py  uploader.py
calendar_event_engine/scrapers/: abc_scraper.py
calendar_event_engine/scrapers/google_calendar/: api.py  scraper.py
calendar_event_engine/scrapers/ical/: scraper.py
calendar_event_engine/scrapers/statics/: scraper.py
calendar_event_engine/types/: custom_scraper.py  generics.py  submission.py  submission_handlers.py
calendar_event_engine/utils/: location.py
docker/: entrypoint.sh
event_engine/: Runner.py  db_cache.py  filter.py
event_engine/parser/: package.py  submission.py
event_engine/publishers/: abc_publisher.py
event_engine/publishers/mobilizon/: api.py  gql_requests.py  uploader.py
event_engine/scrapers/: abc_scraper.py
event_engine/scrapers/Websites/: cafe9.py
event_engine/scrapers/google_calendar/: api.py  scraper.py
event_engine/types/: custom_scraper.py  submission.py  submission_handlers.py
event_engine/utils/: location.py
src/: Runner.py  db_cache.py  filter.py
src/parser/: jsonParser.py  package.py  submission.py
src/publishers/: abc_publisher.py
src/scrapers/: abc_scraper.py
src/types/: custom_scraper.py  submission.py  submission_handlers.py
src/utils/: location.py
tests/: __init__.py  manual_tests.py  test_json_parser.py  test_mobilizon.py  test_parser_mocked.py  test_runner.py  test_sqlite_db.py
tests/fixtures/: test_group_package.json  test_submission.json
tests/integration/: test_ical.py  test_json_parser.py  test_mobilizon.py
tests/scrapers/: test_cafe9.py  test_ical.py
(+12 files in other folders)
