[project]
name = "calendar_event_engine"
version = "0.1.4"
description = ""
authors = [{ name = "Ezequiel Valencia" }]
requires-python = ">=3.10,<4"
readme = "README.md"
dependencies = [
    "requests>=2.31.0,<3",
    "gql==3.5.0",
    "pydantic>=2.7.0,<3",
    "tenacity>=8.2.3,<9",
    "google-auth>=2.0.0",
    "google-api-python-client>=2.127.0,<3",
    "google-auth-oauthlib>=1.2.0,<2",
    "geopy>=2.4.1,<3",
    "slack_sdk>=3.32.0,<4",
    "icalendar>=6.0.1,<7",
    "validators>=0.34.0,<0.35",
    "httpx>=0.28.1"
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "pandas-stubs",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.0.0,<2",
    "ruff>=0.11.5",
    "types-requests>=2.31.0",
]

[tool.mypy]
files = ["calendar_event_engine"]

[[tool.mypy.overrides]]
module = [
    "geopy.*",
    "icalendar.*",
    "icalendar.cal",
    "google_auth_oauthlib.*",
    "googleapiclient.*",
    "google.auth.*",
    "google.oauth2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that hit live external services (deselect with --mock-only)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
